updated links to the footer

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     This project was coded by 
     <a href="https://www.shecodes.io/graduates/178161-milanda-kapeyi" target="_blank">Milanda,
     </a>is
-    <a href="" target="_blank">
+    <a href="https://github.com/mirandakapeyi-cmyk/My-weather-app-2.0" target="_blank">
         Open-sourced on GitHub
     </a>and
-    <a href="" target="_blank">
+    <a href="https://dreamy-semolina-e30433.netlify.app/" target="_blank">
         Hosted on Netlify
         </a>
 </footer>
